css/style.css
html, body {
    height: 100%;
    overflow: auto;
}

body {
    background: url("http://download-wallpapers.net/wallpapers/nature-wallpapers-minimalist-wallpaper-desktop-backgrounds-wallpapers-aiddblgig-wallpaper-42230.jpg") center no-repeat;
    font-family: 'Lato', sans-serif;
}

h1 {
    text-align: center;
}

#searchForm {
    position: absolute;
    top: 60%;
    left: 50%;
    margin-left: -150px;
    height: 100%;
    -moz-transition: transform 1s;
    -webkit-transition: transform 1s;
    -ms-transition: transform 1s;
    -o-transition: transform 1s;
    transition: transform 1s;
}

#wrapper {
    position: relative;
    height: 400px;
}

#spinner {
    position: absolute;
    top: 30%;
    left: 50%;
    margin-left: -150px;
    display: none;
}

#hits {
    margin-top: 6%;
}

#no-results {
    text-align: center;
    font-size: 24px;
    display: none;
}

.hit {
    margin: 1%;
}
.hit:hover {
    transform: scale(1.02);
}

